--- a/style.css
+++ b/style.css
@@ -381,7 +381,7 @@ h3{
 #paid{
     background-color:rgb(18, 248, 18);
     border: none;
-    height: 60px;
+    height: 40px;
     width: 100px;
     color: white;
     font-family:Georgia, 'Times New Roman', Times, serif;
@@ -406,5 +406,6 @@ h3{
     background-color: rgb(155, 155, 155);
     color: rgb(79, 79, 79);
     border: none;
+    margin-top: 8px;
     cursor:no-drop;
 }
