--- a/style.css
+++ b/style.css
@@ -71,6 +71,11 @@ h3 {
     display: grid;
 }
 
+#stockLeftText{
+    color: green;
+    font-size: 18px;
+}
+
 #addCartBtn {
     background-color: rgb(18, 248, 18);
     border: none;
@@ -349,7 +354,7 @@ h3 {
     margin-right: auto;
     margin-top: 20px;
     padding: 20px;
-    width: 300px;
+    width: 500px;
     display: none;
 }
 
@@ -455,3 +460,142 @@ h3 {
     margin-top: 8px;
     cursor: no-drop;
 }
+
+#discountArea{
+    background-color: blanchedalmond;
+    border-radius: 15px;
+    text-align: center;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    margin-top: 10px;
+    display: none;
+}
+#inputDiscount{
+    background-color: white;
+    border: 2px solid rgb(18, 248, 18);
+    height: 40px;
+    width: 180px;
+    text-align: center;
+    margin-left: 5px;
+    font-size: 15px;
+    margin-right: 5px;
+    color: rgb(0, 0, 0);
+    resize: none;
+    border-radius: 5px;
+    font-size: 15px;
+}
+#inputDiscount:active{
+    border: 2px solid black;
+}
+#inputDiscount:disabled{
+    background-color: rgb(161, 161, 161);
+    border: 2px solid rgb(90, 90, 90);
+    cursor: no-drop;
+}
+#discountPay {
+    background-color: rgb(18, 248, 18);
+    border: none;
+    height: 40px;
+    width: fit-content;
+    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    border-radius: 5px;
+}
+
+#discountPay:hover {
+    cursor: pointer;
+    background-color: white;
+    border: 2px solid rgb(18, 248, 18);
+    color: black;
+}
+
+#discountPay:active {
+    cursor: default;
+    background-color: rgb(18, 248, 18);
+    border: 2px solid black;
+    color: white;
+}
+#discountSubmit,#discountEdit{
+    background-color: rgb(18, 248, 18);
+    border: none;
+    height: 40px;
+    width: fit-content;
+    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    border-radius: 5px;
+}
+
+#discountSubmit:hover,#discountEdit:hover {
+    cursor: pointer;
+    background-color: white;
+    border: 2px solid rgb(18, 248, 18);
+    color: black;
+}
+
+#discountSubmit:active,#discountEdit:active {
+    cursor: default;
+    background-color: rgb(18, 248, 18);
+    border: 2px solid black;
+    color: white;
+}
+#discountSubmit:disabled,#discountEdit:disabled{
+    color: rgb(129, 129, 129);
+    cursor: no-drop;
+    background-color: rgb(161, 161, 161);
+    border: 2px solid rgb(178, 178, 178);
+}
+
+#addProductsDisct{
+    background-color: rgb(18, 248, 18);
+    border: none;
+    height: 40px;
+    width: fit-content;
+    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    border-radius: 5px;
+}
+#addProductsDisct:hover {
+    cursor: pointer;
+    background-color: white;
+    border: 2px solid rgb(18, 248, 18);
+    color: black;
+}
+
+#addProductsDisct:active {
+    cursor: default;
+    background-color: rgb(18, 248, 18);
+    border: 2px solid black;
+    color: white;
+}
+
+@media only screen and (max-width: 556px) {
+    #discountArea{
+        width: 300px;
+    }
+    #paymentArea {
+        width: 300px;
+    }
+  }
+
+  @media only screen and (max-width: 342px) {
+    #discountArea{
+        width: 200px;
+    }
+    button{
+        margin-top: 10px;
+    }
+    #paymentArea {
+        width: 200px;
+    }
+  }
